--- a/Sass/style.css
+++ b/Sass/style.css
@@ -102,11 +102,68 @@ footer .attribution a {
   color: hsl(228deg, 45%, 44%);
 }
 
+@media screen and (min-width: 550px) {
+  .content {
+    max-width: 600px;
+  }
+  form button {
+    right: 5px;
+  }
+}
 @media screen and (min-width: 720px) {
   main .img-mobile {
     display: none;
   }
   main .img-desktop {
     display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main {
+    display: grid;
+    grid-template-columns: 800px 610px;
+    grid-template-rows: 100px 100px 300px 300px;
+  }
+  main .logo {
+    margin-left: 80px;
+    margin-top: 40px;
+    grid-row: 1/2;
+    grid-column: 1;
+  }
+  main .logo img {
+    width: 130px;
+  }
+  main .img-desktop {
+    grid-column: 2;
+    grid-row: 1/-1;
+  }
+  main .content {
+    margin-top: 100px;
+    grid-column: 1;
+    grid-row: 2/5;
+    margin-left: 70px;
+    align-self: start;
+  }
+  main .content .title {
+    text-align: left;
+    font-size: 3.5em;
+    margin-right: 110px;
+    letter-spacing: 10px;
+  }
+  main .content .parrafo {
+    font-size: 1em;
+    text-align: left;
+    margin-right: 100px;
+    margin-bottom: 50px;
+  }
+  main form .email {
+    height: 70px;
+    width: 80%;
+  }
+  main form button {
+    right: 850px;
+    margin-top: 0;
+    height: 70px;
+    width: 90px;
   }
 }/*# sourceMappingURL=style.css.map */
