--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -18,7 +18,7 @@ main{
     justify-content: center;
     align-items: center;
     width: 100vw;
-
+   
     .logo{
         width: 100%;
         align-self: start;
@@ -125,6 +125,22 @@ footer{
 
 }
 
+@media screen and (min-width:550px) {
+
+    .content{
+        max-width: 600px ;
+    }
+    form{
+        button{
+
+            right: 5px;
+        }
+         
+    }
+    
+}
+
+
 @media screen and (min-width:720px) {
     main{
         .img-mobile{
@@ -135,3 +151,63 @@ footer{
         }
     
 }}
+
+@media screen and  (min-width:1200px){
+
+    main{
+        display: grid;
+        grid-template-columns: 800px 610px;
+        grid-template-rows: 100px 100px 300px 300px;
+        .logo{
+            margin-left: 80px;
+            margin-top: 40px;
+            
+            grid-row:1/2 ;
+            grid-column: 1;
+            img{
+                width: 130px;
+            }
+        }
+
+        .img-desktop{
+            grid-column: 2;
+            grid-row: 1/-1;
+        }
+
+        .content{
+
+            margin-top: 100px;
+            grid-column: 1;
+            grid-row: 2/5;
+            margin-left: 70px;
+            align-self: start;
+            .title{
+                text-align: left;
+                font-size: 3.5em;
+                margin-right: 110px;
+                letter-spacing: 10px;
+            }   
+            .parrafo{
+                font-size: 1em;
+                text-align: left;
+                margin-right: 100px;
+                margin-bottom: 50px;
+            }
+
+
+        }
+        form{
+            .email{
+                height: 70px;
+                width: 80%;}
+
+            button{
+                right: 850px;
+                margin-top: 0;
+                height: 70px;
+                width: 90px;
+            }
+        }
+    }
+    
+}
