--- a/Sass/style.css
+++ b/Sass/style.css
@@ -54,14 +54,19 @@ main .content .parrafo {
 }
 main form {
   width: 100%;
+  position: relative;
 }
 main form .email {
   width: 100%;
   height: 50px;
   border-radius: 30px;
-  border: 1px solid hsl(0deg, 6%, 24%);
+  border: 1px solid hsl(0deg, 36%, 70%);
+  outline: none;
   background-color: transparent;
   padding: 20px;
+  /*background-image: url(/images/icon-error.svg);*/
+  background-repeat: no-repeat;
+  background-position: 210px 10px;
 }
 main form ::-moz-placeholder {
   color: hsl(0deg, 36%, 70%);
@@ -76,21 +81,29 @@ main form button {
   width: 80px;
   height: 52px;
   border-radius: 30px;
-  right: 25px;
-  margin-top: -1px;
+  right: 0;
   border: none;
   box-shadow: 1px 10px 20px 1px hsl(0deg, 36%, 70%);
   background: linear-gradient(135deg, hsl(0deg, 80%, 86%), hsl(0deg, 74%, 74%));
+}
+main form button .button {
+  margin: 15px 0;
+  width: 12px;
+  height: 20px;
 }
 main form button:hover {
   cursor: pointer;
   background: linear-gradient(135deg, hsl(0deg, 0%, 100%), hsl(0deg, 90%, 80%));
 }
-main form .error {
-  position: absolute;
-  left: 240px;
-  bottom: 0;
-  display: none;
+main form .txt_error {
+  margin-top: 8px;
+  margin-left: -227px;
+  width: 135px;
+  text-align: left;
+  left: 0;
+  color: hsl(0deg, 36%, 70%);
+  font-weight: 400;
+  font-size: 0.8em;
 }
 
 footer .attribution {
@@ -102,12 +115,23 @@ footer .attribution a {
   color: hsl(228deg, 45%, 44%);
 }
 
+@media screen and (min-width: 387px) {
+  main form .email {
+    background-position: 255px;
+  }
+  main form .txt_error {
+    margin-left: -240px;
+  }
+}
 @media screen and (min-width: 550px) {
-  .content {
+  main .content {
     max-width: 600px;
   }
-  form button {
-    right: 5px;
+  main form .txt_error {
+    margin-left: -440px;
+  }
+  main form .email {
+    background-position: 380px;
   }
 }
 @media screen and (min-width: 720px) {
@@ -118,15 +142,16 @@ footer .attribution a {
     display: flex;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1000px) {
   main {
+    background: url(/images/bg-pattern-desktop.svg);
     display: grid;
-    grid-template-columns: 800px 610px;
-    grid-template-rows: 100px 100px 300px 300px;
+    grid-template-columns: 600px 410px;
+    grid-template-rows: 80px 80px 200px 200px;
   }
   main .logo {
-    margin-left: 80px;
-    margin-top: 40px;
+    margin-left: 60px;
+    margin-top: 10px;
     grid-row: 1/2;
     grid-column: 1;
   }
@@ -136,6 +161,79 @@ footer .attribution a {
   main .img-desktop {
     grid-column: 2;
     grid-row: 1/-1;
+    width: 100%;
+    height: 100%;
+  }
+  main .content {
+    margin-top: 10px;
+    grid-column: 1;
+    grid-row: 2/3;
+    margin-left: 70px;
+    align-self: start;
+  }
+  main .content .title {
+    text-align: left;
+    font-size: 3em;
+    margin-right: 110px;
+    letter-spacing: 10px;
+  }
+  main .content .parrafo {
+    font-size: 0.9em;
+    text-align: left;
+    margin-right: 80px;
+    margin-bottom: 10px;
+  }
+  main form {
+    width: 80%;
+    left: -50px;
+  }
+  main form .email {
+    height: 50px;
+    width: 100%;
+    background-position: 260px;
+  }
+  main form button {
+    margin-top: 0;
+    height: 50px;
+    width: 70px;
+  }
+  main form .txt_error {
+    margin-left: -300px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main {
+    grid-template-columns: 700px 500px;
+    grid-template-rows: 100px 100px 220px 220px;
+  }
+  main form {
+    width: 80%;
+    left: -60px;
+  }
+  main form .email {
+    height: 55px;
+    background-position: 320px;
+  }
+  main form button {
+    height: 55px;
+    width: 75px;
+  }
+  main form .txt_error {
+    margin-left: -340px;
+  }
+}
+@media screen and (min-width: 1340px) {
+  main {
+    display: grid;
+    grid-template-columns: 800px 610px;
+    grid-template-rows: 100px 100px 300px 300px;
+  }
+  main .logo {
+    margin-left: 80px;
+    margin-top: 40px;
+  }
+  main .logo img {
+    width: 150px;
   }
   main .content {
     margin-top: 100px;
@@ -157,13 +255,25 @@ footer .attribution a {
     margin-bottom: 50px;
   }
   main form .email {
-    height: 70px;
-    width: 80%;
+    height: 65px;
+    width: 100%;
+    background-position: 300px;
   }
   main form button {
-    right: 850px;
-    margin-top: 0;
-    height: 70px;
+    right: 0;
+    margin-top: -2px;
+    height: 65px;
     width: 90px;
+  }
+  main form button .button {
+    margin-top: 18px 0;
+    width: 18px;
+    height: 28px;
+  }
+  main form .txt_error {
+    margin-left: -330px;
+    margin-top: 22px;
+    font-size: 1em;
+    width: 200px;
   }
 }/*# sourceMappingURL=style.css.map */
