--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -68,14 +68,18 @@ main{
 
     form{
         width: 100%;
+        position: relative;
         .email{
         width: 100%;
         height: 50px;
         border-radius: 30px;
-        border: 1px solid $DarkGrayishRed;
+        border: 1px solid $DesaturatedRed;
+        outline: none;
         background-color: transparent;
         padding: 20px;
-
+        /*background-image: url(/images/icon-error.svg);*/
+        background-repeat: no-repeat;
+        background-position: 210px 10px;
        
     }
     ::placeholder{
@@ -88,23 +92,37 @@ main{
         width: 80px;
         height: 52px;
         border-radius: 30px;
-        right: 25px;
-        margin-top: -1px;
+        right: 0;
+        
         border: none;
         box-shadow: 1px 10px 20px 1px $DesaturatedRed;
         background:  linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+
+        .button{
+            margin: 15px 0;
+            width: 12px;
+            height: 20px;
+        }
+    
     }
     button:hover{
         cursor: pointer;
         background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 90%, 80%));
     }
-    .error{
-        position: absolute;
-        left: 240px;
-        bottom: 0;
-        display: none;
+    .txt_error{
+        margin-top: 8px;
+        margin-left: -227px;
+        width: 135px;
+        text-align: left;
+        left: 0;
+        color: hsl(0deg, 36%, 70%);
+        font-weight: 400;
+        font-size: 0.8em;
+        
     }
+  
 }
+
 
 
 
@@ -124,19 +142,35 @@ footer{
     }
 
 }
-
+@media screen and (min-width:387px) {
+    main{
+        form{
+            .email{
+                background-position: 255px;
+            }
+            .txt_error{
+                margin-left: -240px;
+            }
+        }
+    }
+    
+}
 @media screen and (min-width:550px) {
 
+main{
     .content{
         max-width: 600px ;
     }
     form{
-        button{
-
-            right: 5px;
+        .txt_error{
+            margin-left: -440px;
         }
-         
-    }
+        .email{
+      
+    background-position: 380px;
+        }
+       
+    }}
     
 }
 
@@ -152,15 +186,16 @@ footer{
     
 }}
 
-@media screen and  (min-width:1200px){
+@media screen and  (min-width:1000px){
 
     main{
+        background: url(/images/bg-pattern-desktop.svg);
         display: grid;
-        grid-template-columns: 800px 610px;
-        grid-template-rows: 100px 100px 300px 300px;
+        grid-template-columns: 600px 410px;
+        grid-template-rows: 80px 80px 200px 200px;
         .logo{
-            margin-left: 80px;
-            margin-top: 40px;
+            margin-left: 60px;
+            margin-top: 10px;
             
             grid-row:1/2 ;
             grid-column: 1;
@@ -172,7 +207,99 @@ footer{
         .img-desktop{
             grid-column: 2;
             grid-row: 1/-1;
+            width: 100%;
+            height: 100%;
         }
+
+        .content{
+
+            margin-top: 10px;
+            grid-column: 1;
+            grid-row: 2/3;
+            margin-left: 70px;
+            align-self: start;
+            .title{
+                text-align: left;
+                font-size: 3em;
+                margin-right: 110px;
+                letter-spacing: 10px;
+            }   
+            .parrafo{
+                font-size: 0.9em;
+                text-align: left;
+                margin-right: 80px;
+                margin-bottom: 10px;
+            }
+
+
+        }
+        form{
+            width: 80%;
+            left: -50px;
+            .email{
+                height: 50px;
+                width: 100%;
+                background-position: 260px;}
+
+            button{
+                
+                margin-top: 0;
+                height: 50px;
+                width: 70px;
+            }
+            .txt_error{
+                margin-left:-300px ;
+            }
+        }
+    }
+    
+}
+@media screen and (min-width:1200px) {
+
+    main{
+
+        grid-template-columns: 700px 500px;
+        grid-template-rows:100px 100px 220px 220px ;
+
+
+        form{
+            width: 80%;
+            left:-60px ;
+            .email{
+                height: 55px;
+                background-position: 320px;
+            }
+            button{
+                height: 55px;
+                width: 75px;
+            }
+            .txt_error{
+                margin-left: -340px;
+            }
+        }
+
+    }
+    
+
+
+}
+@media screen and  (min-width:1340px){
+
+    main{
+        display: grid;
+        grid-template-columns: 800px 610px;
+        grid-template-rows: 100px 100px 300px 300px;
+        .logo{
+            margin-left: 80px;
+            margin-top: 40px;
+            
+          
+            img{
+                width: 150px;
+            }
+        }
+
+        
 
         .content{
 
@@ -198,14 +325,26 @@ footer{
         }
         form{
             .email{
-                height: 70px;
-                width: 80%;}
+                height: 65px;
+                width: 100%;
+                background-position: 300px;}
 
             button{
-                right: 850px;
-                margin-top: 0;
-                height: 70px;
+                right: 0;
+                margin-top: -2px;
+                height: 65px;
                 width: 90px;
+                .button{
+                    margin-top: 18px 0;
+                    width: 18px;
+                    height: 28px;
+                }
+            }
+            .txt_error{
+                margin-left: -330px;
+                margin-top: 22px;
+                font-size: 1em;
+                width: 200px;
             }
         }
     }
